you can add and remove tests, but there is still a problem with editing, the buttons look better, the frontend and backend have been improved, some unnecessary files and lines of code have been removed

--- a/Views/DeviceEntities/Create.cshtml
+++ b/Views/DeviceEntities/Create.cshtml
@@ -17,9 +17,7 @@
         </ul>
     </div>
 }
-<h1>Create</h1>
-
-<h4>DeviceEntity</h4>
+<h1><b>Create</b></h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -50,14 +48,12 @@
             <br>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+                <a class ="btn btn-secondary" asp-action="Index">Back to List</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{
