--- a/Views/MeasurmentEntities/Delete.cshtml
+++ b/Views/MeasurmentEntities/Delete.cshtml
@@ -3,36 +3,57 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1><b>Delete</b></h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>MeasurmentEntity</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Comment)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Comment)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TreatmentTime)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TreatmentTime)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.InsertionTime)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.InsertionTime)
-        </dd>
-    </dl>
-    
+    <div>
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.MeasurementName)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.MeasurementName)
+            </dd>
+            @{
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Comment)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Comment)
+                </dd>
+                var MeasurementName = Model.MeasurementName.ToString();
+                if(MeasurementName == "Observation")
+                {
+                    <dt class="col-sm-2">
+                        @Html.DisplayNameFor(model => model.BodyPart)
+                    </dt>
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(model => model.BodyPart)
+                    </dd>
+                }
+                else
+                {
+                    <dt class="col-sm-2">
+                        @Html.DisplayNameFor(model => model.Value)
+                    </dt>
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(model => model.Value)
+                    </dd>
+                }
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.InsertionTime)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.InsertionTime)
+                </dd>
+            }
+        </dl>
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
+        <a class="btn btn-secondary" asp-action="Index">Back to List</a>
     </form>
 </div>
