--- a/Views/ProfileEntities/Edit.cshtml
+++ b/Views/ProfileEntities/Edit.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1><b>Edit</b></h1>
 
 <h4>ProfileEntity</h4>
 <hr />
@@ -48,13 +48,10 @@
             <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a class="btn btn-secondary"  asp-action="Details">Back</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Details">Back</a>
 </div>
 
 @section Scripts {
