--- a/Views/DeviceEntities/Details.cshtml
+++ b/Views/DeviceEntities/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1><b>Details</b></h1>
 
 <div>
     <h4>ProfileEntity</h4>
@@ -38,7 +38,9 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div class="form-group">
+        <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> 
+        <a class="btn btn-secondary" asp-action="Index">Back to List</a>
+    </div>
 </div>
 
