--- a/Views/ProfileEntities/Create.cshtml
+++ b/Views/ProfileEntities/Create.cshtml
@@ -5,9 +5,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1><b>Create profile</b></h1>
 
-<h4>ProfileEntity</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -47,13 +46,10 @@
             <br>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+                <a class="btn btn-primary"  asp-action="Details">Back</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Details">Back</a>
 </div>
 
 @section Scripts {
