--- a/Views/ProfileEntities/Delete.cshtml
+++ b/Views/ProfileEntities/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1><b>Delete</b></h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -39,7 +39,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Details">Back</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
+        <a class="btn btn-secondary"  asp-action="Details">Back</a>
     </form>
 </div>
