--- a/Views/ProfileEntities/Details.cshtml
+++ b/Views/ProfileEntities/Details.cshtml
@@ -3,14 +3,21 @@
 @{
     ViewData["Title"] = "Details";
 }
-@if (Model == null)
-{
-    <p>
-        <a asp-action="Create">Create New</a>
-    </p>
-}
-<h1>My profile</h1>
 
+
+@if (Model != null)
+{
+    <h1><b>My profile</b></h1>
+}
+else
+{
+    <div class="d-flex justify-content-between align-items-center">
+        <h1><b>My profile</b></h1>
+        <div class="flex-grow-1"></div>
+        <a class="btn btn-primary" asp-action="Create">Create New</a>
+    </div>
+
+}
 <div>
     <hr />
     <dl class="row">
@@ -78,9 +85,10 @@
 </div>
 @if (Model != null)
 {
-    <div>
-        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-        <a asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
+    <div class="d-flex justify-content-start gap-2">
+        <a class="btn btn-primary" style="height: 38px; width: 70px;" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+        <a class="btn btn-danger" style="height: 38px; width: 70px;" asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
     </div>
+
 
 }
