I removed one idea that didn't work

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,13 +25,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Data" asp-action="Index">Data</a>
-                        </li>
-                         <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="MeasurmentEntities" asp-action="Create">New Test</a>
                          </li>
                          <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="MeasurmentEntities" asp-action="Index">Measuremnts</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="MeasurmentEntities" asp-action="Index">Measurements</a>
                          </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="ProfileEntities" asp-action="Details">My Profile</a>
